Fix align on resume download icon

--- a/client/app/resume/resume.css
+++ b/client/app/resume/resume.css
@@ -20,6 +20,7 @@ hr {
   height: 39px;
   line-height: 39px;
   color: black;
+  vertical-align: text-top;
 }
 
 .resume-download .glyphicon:hover {
